[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/enemies sprites.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/BearScript.gd" type="Script" id=2]
[ext_resource path="res://assets/exploion big/frames/1_3.png" type="Texture" id=3]
[ext_resource path="res://assets/exploion big/frames/1_1.png" type="Texture" id=4]
[ext_resource path="res://assets/exploion big/frames/1_2.png" type="Texture" id=5]
[ext_resource path="res://assets/exploion big/frames/1_16.png" type="Texture" id=6]
[ext_resource path="res://assets/exploion big/frames/1_19.png" type="Texture" id=7]
[ext_resource path="res://assets/exploion big/frames/1_20.png" type="Texture" id=8]
[ext_resource path="res://assets/exploion big/frames/1_21.png" type="Texture" id=9]
[ext_resource path="res://assets/exploion big/frames/1_22.png" type="Texture" id=10]
[ext_resource path="res://assets/exploion big/frames/1_23.png" type="Texture" id=11]
[ext_resource path="res://assets/exploion big/frames/1_24.png" type="Texture" id=12]
[ext_resource path="res://assets/exploion big/frames/1_25.png" type="Texture" id=13]
[ext_resource path="res://assets/exploion big/frames/1_26.png" type="Texture" id=14]
[ext_resource path="res://assets/exploion big/frames/1_27.png" type="Texture" id=15]
[ext_resource path="res://assets/exploion big/frames/1_28.png" type="Texture" id=16]
[ext_resource path="res://assets/exploion big/frames/1_29.png" type="Texture" id=17]
[ext_resource path="res://assets/exploion big/frames/1_49.png" type="Texture" id=18]
[ext_resource path="res://assets/exploion big/frames/1_7.png" type="Texture" id=19]
[ext_resource path="res://assets/exploion big/frames/1_11.png" type="Texture" id=20]
[ext_resource path="res://assets/exploion big/frames/1_12.png" type="Texture" id=21]
[ext_resource path="res://assets/exploion big/frames/1_13.png" type="Texture" id=22]
[ext_resource path="res://assets/exploion big/frames/1_14.png" type="Texture" id=23]
[ext_resource path="res://assets/exploion big/frames/1_30.png" type="Texture" id=24]
[ext_resource path="res://assets/exploion big/frames/1_31.png" type="Texture" id=25]
[ext_resource path="res://assets/exploion big/frames/1_32.png" type="Texture" id=26]
[ext_resource path="res://assets/exploion big/frames/1_33.png" type="Texture" id=27]
[ext_resource path="res://assets/exploion big/frames/1_34.png" type="Texture" id=28]
[ext_resource path="res://assets/exploion big/frames/1_35.png" type="Texture" id=29]
[ext_resource path="res://assets/exploion big/frames/1_36.png" type="Texture" id=30]
[ext_resource path="res://assets/exploion big/frames/1_37.png" type="Texture" id=31]
[ext_resource path="res://assets/exploion big/frames/1_38.png" type="Texture" id=32]
[ext_resource path="res://assets/exploion big/frames/1_39.png" type="Texture" id=33]
[ext_resource path="res://assets/exploion big/frames/1_40.png" type="Texture" id=34]
[ext_resource path="res://assets/exploion big/frames/1_41.png" type="Texture" id=35]
[ext_resource path="res://assets/exploion big/frames/1_42.png" type="Texture" id=36]
[ext_resource path="res://assets/exploion big/frames/1_43.png" type="Texture" id=37]
[ext_resource path="res://assets/exploion big/frames/1_6.png" type="Texture" id=38]
[ext_resource path="res://assets/exploion big/frames/1_44.png" type="Texture" id=39]
[ext_resource path="res://assets/exploion big/frames/1_45.png" type="Texture" id=40]
[ext_resource path="res://assets/exploion big/frames/1_46.png" type="Texture" id=41]
[ext_resource path="res://assets/exploion big/frames/1_47.png" type="Texture" id=42]
[ext_resource path="res://assets/exploion big/frames/1_48.png" type="Texture" id=43]
[ext_resource path="res://assets/exploion big/frames/1_0.png" type="Texture" id=44]
[ext_resource path="res://assets/exploion big/frames/1_4.png" type="Texture" id=45]
[ext_resource path="res://assets/exploion big/frames/1_5.png" type="Texture" id=46]
[ext_resource path="res://assets/exploion big/frames/1_9.png" type="Texture" id=47]
[ext_resource path="res://assets/exploion big/frames/1_8.png" type="Texture" id=48]
[ext_resource path="res://assets/exploion big/frames/1_10.png" type="Texture" id=49]
[ext_resource path="res://assets/exploion big/frames/1_15.png" type="Texture" id=50]
[ext_resource path="res://assets/exploion big/frames/1_17.png" type="Texture" id=51]
[ext_resource path="res://assets/exploion big/frames/1_18.png" type="Texture" id=52]
[ext_resource path="res://assets/sound/animal-sounds/bearSounds.mp3" type="AudioStream" id=53]
[ext_resource path="res://assets/sound/explosion_large.wav" type="AudioStream" id=54]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.5, 17 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 50, 138, 40, 46 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 90, 138, 40, 46 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 130, 138, 40, 46 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 170, 138, 40, 46 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 19 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 50 ), ExtResource( 6 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 18 ) ],
"loop": false,
"name": "explode",
"speed": 24.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[node name="Bear" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 8
script = ExtResource( 2 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( -100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 5 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walk"
frame = 3
playing = true

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 100, 0 )

[node name="AudioStreamExplode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 54 )

[node name="AudioStreamNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 53 )

[node name="UpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="RightUpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 65, -50 )

[node name="LeftUpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -65, -50 )

[node name="platformRayCast" type="RayCast2D" parent="."]
position = Vector2( 20, 5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 9
collide_with_areas = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
